--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -22,3 +22,27 @@ body
 
 code 
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace
+
+//Accordion
+.accordion
+  background-color: #eee
+  color: #444
+  cursor: pointer
+  padding: 18px
+  width: 100%
+  text-align: left
+  border: none
+  outline: none
+  transition: 0.4s
+
+  &.active,
+  &:hover
+    background-color: #ccc
+
+.panel
+  padding: 0 18px
+  background-color: white
+  display: none
+  overflow: hidden
+
+
